CultiBox (1.1.0) precise; urgency=low
   + Correction et fonctionnalité sur l'affichage des logs: affichage de différent capteur (un à la fois pour le moment), correction de l'affichage des programmes si l'echelle change, correction des fakes_log avec la nouvelle base de log (champ sensor_nb en plus), ajout d'une fonctionnalité permettant de vider la base de logs, affichage de tous les capteurs en même temps... 
01_install/01_src/02_sql/fake_log.sql
        02_src/joomla/main/scripts/waiting.php
        02_src/joomla/main/scripts/logs.php
        02_src/joomla/main/libs/css/cultibox.css
        02_src/joomla/main/libs/utilfunc.php
        02_src/joomla/main/libs/db_common.php
        02_src/joomla/main/templates/logs.html
        02_src/joomla/main/locale/fr_FR.utf8.po
        02_src/joomla/main/locale/en_GB.utf8.po

   + Correction des adresses des prises et du fichier pluga
        02_src/joomla/main/libs/config.php

   + Enregistrement des différents capteurs
        ALTER TABLE `logs` ADD `sensor_nb` INT NOT NULL DEFAULT '1'

        01_install/01_src/02_sql/cultibox_fr.sql
        01_install/01_src/02_sql/cultibox_en.sql
        02_src/joomla/main/libs/utilfunc.php
        02_src/joomla/main/libs/db_common.php
        02_src/joomla/main/libs/config.php

   + Modification des couleurs des graphes (passage en hexa)
        02_src/joomla/main/scripts/logs.php
        02_src/joomla/main/libs/config.php
   + Mise en place d'un bouton précédent/suivant dans les logs pour rapidement changer la date
        02_src/joomla/main/libs/utilfunc.php
        02_src/joomla/main/libs/css/cultibox.css
        02_src/joomla/main/templates/logs.html
        02_src/joomla/main/templates/configuration.html
        02_src/joomla/main/templates/cost.html
        02_src/joomla/main/templates/wizard.html
        02_src/joomla/main/locale/fr_FR.utf8.po
        02_src/joomla/main/locale/en_GB.utf8.po
