@@ -145,11 +145,11 @@ td.log-manage-marge {
 }
 
 td.log-manage-field {
-   width: 50%;
+   width: 35%;
 }
 
 td.log-manage-title {
-   width: 20%;
+   width: 55%;
 }
 
 td.plug-marge-title {
