@@ -1,11 +1,11 @@
-<script type="text/javascript">
+<script>
 function verifDate(e) {
    if((e.keyCode < 45 || e.keyCode > 57)&&(e.keyCode != 08 && e.keyCode != 10 && e.keyCode != 13)) e.returnValue = false;
    if((e.which < 45 || e.which > 57)&&(e.which != 08 && e.which != 10 && e.which != 13)) return false;
 }
 </script>
 
-<script type="text/javascript">
+<script>
    function getType(i) {
       var divSelectDay = document.getElementById('label_select_day');
       var divSelectMonth = document.getElementById('label_select_month');
@@ -18,7 +18,7 @@ function verifDate(e) {
    }
 </script>
 
-<script type="text/javascript">
+<script>
     function DeleteForm() {
             var answer = confirm("<?php echo __('RESET_CONFIRM','javascript'); ?>");
             if (answer) {
@@ -30,11 +30,11 @@ function verifDate(e) {
 
 
 <?php if((isset($pop_up))&&("$pop_up"!="False")&&(isset($pop_up_message))&&(!empty($pop_up_message))) { ?>
-   <SCRIPT LANGUAGE="JavaScript">
+   <SCRIPT>
       alert('<?php echo "$pop_up_message"; ?>');
    </SCRIPT>
 <?php } else if((isset($pop_up))&&("$pop_up"!="False")&&(isset($pop_up_error_message))&&(!empty($pop_up_error_message))) { ?>
-   <SCRIPT LANGUAGE="JavaScript">
+   <SCRIPT>
       alert('<?php echo "$pop_up_error_message"; ?>');
    </SCRIPT>
 <?php } ?>
@@ -186,6 +186,7 @@ buttonImageOnly: 'true',
             <?php } ?>
          </select>
       </td>
+      <td></td>
    </tr>
    <tr>
       <td></td>
@@ -699,13 +700,53 @@ $(function () {
 <hr />
 <br />
 
-<form action="/cultibox/index.php/display-logs" method="post" >
 <label class="title_conf"><img src="main/libs/img/arrow.png" alt="" /><?php echo __('MANAGE_LOG_INFOS'); ?>:</label>
+<form action="/cultibox/index.php/display-logs" method="post" >
+<table class="table_width">
+<tr>
+    <td class="log-manage-marge"></td>
+    <td class="log-manage-title"><?php echo __('IMPORT_LOG_TITLE')." ".$log_search." ".__('IMPORT_LAST_MONTH'); ?></td>
+    <td class="log-manage-field"><INPUT type="submit" id="import_log" name="import_log" value="<?php echo __('IMPORT_LOG'); ?>"></td>
+</tr>
+</table>
+<input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
+<input type="hidden" name="select_power" value="<?php echo $select_power; ?>">
+<input type="hidden" name="select_sensor" value="<?php echo $select_sensor; ?>">
+<?php if(strcmp("$type","month")==0) { ?>
+<input type="hidden" name="startmonth" value="<?php echo "$startmonth"; ?>">
+<input type="hidden" name="startyear" value="<?php echo "$startyear"; ?>" >
+<?php } else { ?>
+<input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
+<?php } ?>
+</form>
+
+
+<form action="/cultibox/index.php/display-logs" method="post" >
 <table class="table_width">
 <tr>
     <td class="log-manage-marge"></td>
     <td class="log-manage-title"><?php echo __('MANAGE_RESET_TITLE'); ?></td>
     <td class="log-manage-field"><INPUT type="submit" id="reset_log" name="reset_log" value="<?php echo __('MANAGE_RESET'); ?>" onclick="return DeleteForm()"></td>
+</tr>
+</table>
+<input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
+<input type="hidden" name="select_power" value="<?php echo $select_power; ?>">
+<input type="hidden" name="select_sensor" value="<?php echo $select_sensor; ?>">
+<?php if(strcmp("$type","month")==0) { ?>
+<input type="hidden" name="startmonth" value="<?php echo "$startmonth"; ?>">
+<input type="hidden" name="startyear" value="<?php echo "$startyear"; ?>" >
+<?php } else { ?>
+<input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
+<?php } ?>
+</form>
+
+
+<form action="/cultibox/index.php/display-logs" method="post" >
+<table class="table_width">
+<tr>
+    <td class="log-manage-marge"></td>
+    <td class="log-manage-title"><?php echo __('MANAGE_RESET_TITLE_POWER'); ?></td>
+    <td class="log-manage-field"><INPUT type="submit" id="reset_log_power" name="reset_log_power" value="<?php echo __('MANAGE_RESET'); ?>" onclick="return DeleteForm()"></td>
 </tr>
 </table>
 <input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
